@@ -43,45 +43,37 @@ import java.util.List;
 import com.google.common.collect.ImmutableList;
 
 public class SivatagBiome {
-	public static final Climate.ParameterPoint PARAMETER_POINT = new Climate.ParameterPoint(Climate.Parameter.span(0.5f, 1.5f),
-			Climate.Parameter.span(-1.3f, -0.3f), Climate.Parameter.span(0.02f, 1.02f), Climate.Parameter.span(0.4f, 1.4f),
-			Climate.Parameter.point(0), Climate.Parameter.span(-0.642383977329f, 0.357616022671f), 0);
+	public static final List<Climate.ParameterPoint> PARAMETER_POINTS = List.of(
+			new Climate.ParameterPoint(Climate.Parameter.span(0.4f, 1.6f), Climate.Parameter.span(-1.4f, -0.20000000000000007f), Climate.Parameter.span(-0.07999999999999996f, 1.12f), Climate.Parameter.span(0.29999999999999993f, 1.5f),
+					Climate.Parameter.point(0.0f), Climate.Parameter.span(-0.742383977328691f, 0.45761602267130896f), 0),
+			new Climate.ParameterPoint(Climate.Parameter.span(0.4f, 1.6f), Climate.Parameter.span(-1.4f, -0.20000000000000007f), Climate.Parameter.span(-0.07999999999999996f, 1.12f), Climate.Parameter.span(0.29999999999999993f, 1.5f),
+					Climate.Parameter.point(1.0f), Climate.Parameter.span(-0.742383977328691f, 0.45761602267130896f), 0));
 
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-103).waterColor(-16763956).waterFogColor(-16751002).skyColor(-103)
-				.foliageColorOverride(-13421824).grassColorOverride(-6684826).ambientParticle(new AmbientParticleSettings(ParticleTypes.ASH, 0.008f))
-				.build();
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-103).waterColor(-16763956).waterFogColor(-16751002).skyColor(-103).foliageColorOverride(-13421824).grassColorOverride(-6684826)
+				.ambientParticle(new AmbientParticleSettings(ParticleTypes.ASH, 0.008f)).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("prob:tree_sivatag",
 						FeatureUtils.register("prob:tree_sivatag", Feature.TREE,
-								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.OAK_LOG.defaultBlockState()),
-										new ForkingTrunkPlacer(7, 2, 2), BlockStateProvider.simple(Blocks.AIR.defaultBlockState()),
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(Blocks.OAK_LOG.defaultBlockState()), new ForkingTrunkPlacer(7, 2, 2), BlockStateProvider.simple(Blocks.AIR.defaultBlockState()),
 										new AcaciaFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0)), new TwoLayersFeatureSize(1, 0, 2))
-										.decorators(ImmutableList.of(SivatagLeaveDecorator.INSTANCE, SivatagTrunkDecorator.INSTANCE,
-												SivatagFruitDecorator.INSTANCE))
-										.build()),
-						List.of(CountPlacement.of(4), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
-								BiomeFilter.biome())));
+										.decorators(ImmutableList.of(SivatagLeaveDecorator.INSTANCE, SivatagTrunkDecorator.INSTANCE, SivatagFruitDecorator.INSTANCE)).build()),
+						List.of(CountPlacement.of(4), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("prob:grass_sivatag", VegetationFeatures.PATCH_GRASS, List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4),
-						InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
+				PlacementUtils.register("prob:grass_sivatag", VegetationFeatures.PATCH_GRASS, List.of(NoiseThresholdCountPlacement.of(-0.8D, 5, 4), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_WORLD_SURFACE, BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("prob:patch_cactus_sivatag", VegetationFeatures.PATCH_SUGAR_CANE,
-						List.of(RarityFilter.onAverageOnceEvery(1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())));
+				PlacementUtils.register("prob:patch_cactus_sivatag", VegetationFeatures.PATCH_SUGAR_CANE, List.of(RarityFilter.onAverageOnceEvery(1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP, BiomeFilter.biome())));
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
 				PlacementUtils.register("prob:disk_gravel_sivatag",
 						FeatureUtils.register("prob:disk_gravel_sivatag", Feature.DISK,
-								new DiskConfiguration(RuleBasedBlockStateProvider.simple(Blocks.GRAVEL),
-										BlockPredicate.matchesBlocks(List.of(Blocks.SAND, Blocks.SANDSTONE)), UniformInt.of(2, 5), 2)),
+								new DiskConfiguration(RuleBasedBlockStateProvider.simple(Blocks.GRAVEL), BlockPredicate.matchesBlocks(List.of(Blocks.SAND, Blocks.SANDSTONE)), UniformInt.of(2, 5), 2)),
 						List.of(CountPlacement.of(1), InSquarePlacement.spread(), PlacementUtils.HEIGHTMAP_TOP_SOLID, BiomeFilter.biome())));
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
 		BiomeDefaultFeatures.addSurfaceFreezing(biomeGenerationSettings);
 		MobSpawnSettings.Builder mobSpawnInfo = new MobSpawnSettings.Builder();
 		mobSpawnInfo.addSpawn(MobCategory.CREATURE, new MobSpawnSettings.SpawnerData(EntityType.VILLAGER, 20, 4, 4));
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(2f).downfall(0.1f).specialEffects(effects)
-				.mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(2f).downfall(0.1f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
